2008-12-04  Gary Benson  <gbenson@redhat.com>

	* .hgignore: Ignore rt/javax/script/*.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Update for b14.
	* Makefile.am (ICEDTEA_PATCHES): Remove patches applied in b14.
	* patches/icedtea-4486841.patch, patches/icedtea-6484091.patch,
	patches/icedtea-6497740.patch, patches/icedtea-6588160.patch,
	patches/icedtea-6592792.patch, patches/icedtea-6721753.patch,
	patches/icedtea-6726779.patch, patches/icedtea-6733959.patch,
	patches/icedtea-6734167.patch, patches/icedtea-6755943.patch,
	patches/icedtea-6766136.patch: Remove.
	* patches/icedtea-rhino.patch: Update.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/14.0b08/icedtea-shark.patch: Fix path name.
	* patches/icedtea-fortify-source.patch: Don't introduce new warnings.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ZERO_PATCHES, ICEDTEA_PATCHES): Fix patch order.
	* patches/icedtea-hotspot7-build-fixes.patch: Restore.
	* patches/hotspot/original/icedtea-shark.patch: Regenerate.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-shark.patch: Moved to ...
	* patches/hotspot/original/icedtea-shark.patch: ... here.
	* patches/hotspot/14.0b08/icedtea-shark.patch: New, regenerated.
	* Makefile.am (SHARK_PATCH): Conditionalze on WITH_ALT_HSBUILD.

2008-12-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/extract.stamp): Only extract HOTSPOT_SRC_ZIP,
	if WITH_ALT_HSBUILD is defined.

2008-12-02  Omair Majid  <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java:
	Change scope of class and functions from public to package-private.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextListener.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Debug.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Operation.java:
	Likewise.