@@ -34,6 +34,7 @@ AC_SUBST([HG])
 AC_PATH_TOOL([LSB_RELEASE],[lsb_release])
 AC_CHECK_WITH_GCJ
 AC_CHECK_WITH_HOTSPOT_BUILD
+AC_PATH_TOOL([LINUX32],[linux32])
 
 AC_MSG_CHECKING([for a JDK home directory])
 AC_ARG_WITH([gcj-home],
